--- a/app/views/panel_partials/_inclusion_exclusion.html.haml
+++ b/app/views/panel_partials/_inclusion_exclusion.html.haml
@@ -2,11 +2,15 @@
   .panel_btns.center-align{:"data-inclusion-grid" => panel.inclusion_grid, :"data-exclusion-grid" => panel.exclusion_grid }
     - component_names = panel.screen.components.map(&:name)
     - if component_names.index(panel.inclusion_grid) < component_names.index(panel.exclusion_grid)
-      %i#add_btn.material-icons.disabled arrow_back
-      %i#remove_btn.material-icons.disabled arrow_forward
+      %i#add_btn.material-icons.disabled
+        = panel.vertical ? 'arrow_upward' : 'arrow_back'
+      %i#remove_btn.material-icons.disabled
+        = panel.vertical ? 'arrow_downward' : 'arrow_forward'
     - else
-      %i#add_btn.material-icons.disabled arrow_forward
-      %i#remove_btn.material-icons.disabled arrow_back
+      %i#add_btn.material-icons.disabled
+        = panel.vertical ? 'arrow_upward' : 'arrow_forward'
+      %i#remove_btn.material-icons.disabled
+        = panel.vertical ? 'arrow_downward' : 'arrow_back'
 
 :javascript
   $(function(){
