--- a/app/views/_grid.html.haml
+++ b/app/views/_grid.html.haml
@@ -14,19 +14,28 @@
       - grid.header_actions.each do |a|
         = render("/action_partials/#{a[:name]}", :grid => grid) #rescue nil
       .toolbar-wrapper
-        .toolbar-global(data-grid="#{@grid_name}")
-          %ul
-            - toolbar_items_global.each do |item|
-              %li.toolbar_item
-                =link_to 'javascript:void(0);', item.anchor_tag_options do
-                  %i.material-icons= item.icon.presence || 'help'
-                  %span= item.title
-        .toolbar-select.hide(data-grid="#{@grid_name}")
-          %ul
-            - toolbar_items_select.each do |item|
-              %li.toolbar_item
-                = link_to 'javascript:void(0);', item.anchor_tag_options do
-                  %i.material-icons= item.icon.presence || 'help'
+        - case WulinMaster.config.button_mode
+        - when 'merged'
+          .toolbar-select.hide(data-grid="#{@grid_name}")
+            %ul
+              - toolbar_items.each do |item|
+                %li.toolbar_item
+                  = link_to 'javascript:void(0);', item.anchor_tag_options do
+                    %i.material-icons= item.icon.presence || 'help'
+        - else
+          .toolbar-global(data-grid="#{@grid_name}")
+            %ul
+              - toolbar_items_global.each do |item|
+                %li.toolbar_item
+                  =link_to 'javascript:void(0);', item.anchor_tag_options do
+                    %i.material-icons= item.icon.presence || 'help'
+                    %span= item.title
+          .toolbar-select.hide(data-grid="#{@grid_name}")
+            %ul
+              - toolbar_items_select.each do |item|
+                %li.toolbar_item
+                  = link_to 'javascript:void(0);', item.anchor_tag_options do
+                    %i.material-icons= item.icon.presence || 'help'
       .selection-info
   .grid
   .pager
