--- a/app/views/_toolbar.html.haml
+++ b/app/views/_toolbar.html.haml
@@ -8,23 +8,7 @@
 .toolbar-wrapper
   - case WulinMaster.config.button_mode
   - when 'merged'
-    .toolbar-select.hide(data-grid="#{@grid_name}")
-      %ul
-        - toolbar_items.each do |item|
-          %li.toolbar_item
-            = link_to 'javascript:void(0);', item.anchor_tag_options do
-              %i.material-icons= item.icon.presence || 'help'
+    = render '/action_partials/toolbar/select', toolbar_items: toolbar_items
   - else
-    .toolbar-global(data-grid="#{@grid_name}")
-      %ul
-        - toolbar_items_global.each do |item|
-          %li.toolbar_item
-            =link_to 'javascript:void(0);', item.anchor_tag_options do
-              %i.material-icons= item.icon.presence || 'help'
-              %span= item.title
-    .toolbar-select.hide(data-grid="#{@grid_name}")
-      %ul
-        - toolbar_items_select.each do |item|
-          %li.toolbar_item
-            = link_to 'javascript:void(0);', item.anchor_tag_options do
-              %i.material-icons= item.icon.presence || 'help'
+    = render '/action_partials/toolbar/global', toolbar_items: toolbar_items_global
+    = render '/action_partials/toolbar/select', toolbar_items: toolbar_items_select
