FEATURE #134 - Achieve the actions buttons with mode

--- a/app/views/_toolbar.html.haml
+++ b/app/views/_toolbar.html.haml
@@ -8,7 +8,8 @@
 .toolbar-wrapper
   - case WulinMaster.config.button_mode
   - when 'merged'
-    = render '/action_partials/toolbar/select', toolbar_items: toolbar_items
+    = render '/action_partials/toolbar/merged', toolbar_items: toolbar_items_select
+    = render '/action_partials/toolbar/merged', toolbar_items: toolbar_items_global
   - else
     = render '/action_partials/toolbar/global', toolbar_items: toolbar_items_global
     = render '/action_partials/toolbar/select', toolbar_items: toolbar_items_select
