FEATURE #136 - Align search info into the center of footer

--- a/app/assets/stylesheets/grid.color.scss
+++ b/app/assets/stylesheets/grid.color.scss
@@ -37,6 +37,8 @@ $wulin-colors: (
       .toolbar-wrapper .toolbar-global ul li.toolbar_item a {
         color: $color;
       }
+    }
+    .slick-pager {
       .selection-info {
         color: $color;
         a.clear {
