--- a/app/assets/stylesheets/grid.container.scss
+++ b/app/assets/stylesheets/grid.container.scss
@@ -20,7 +20,6 @@
     font-size: $font-size-small;
     .slick-pager-status.with-filter, .slick-pager-clear-filter {
       position: absolute;
-      float: left;
       color: $filter-color;
       .material-icons {
         font-size: $font-size-middle;
@@ -29,9 +28,35 @@
       span {
         float: right;
       }
-    }
+    };
     .slick-pager-clear-filter {
       padding: 6px 15px 6px 0px;
+    };
+    .selection-info {
+      position: absolute;
+      left: 20px;
+      font-size: $font-size-small;
+      color: $grid-header-selection-info-color;
+      a.clear {
+        position: relative;
+        top: -2px;
+        margin-left: 5px;
+        padding-left: 5px;
+        padding-right: 5px;
+        border-radius: 2px;
+        color: $grid-header-selection-info-color;
+        &:hover {
+          background: rgba(158, 158, 158, 0.2);
+        }
+        span {
+          margin-left: 5px;
+        }
+      }
+      .material-icons {
+        position: relative;
+        top: 3px;
+        font-size: 16px;
+      }
     }
   }
 }
