--- a/app/views/_header.html.haml
+++ b/app/views/_header.html.haml
@@ -13,7 +13,7 @@
           %a#help-btn.btn{href: '#help-modal'}
             %i.material-icons help
       %li
-        %a#activity-btn.dropdown-button.btn.disabled{'data-activates' => 'activity-list', href: '#'}
+        %a#activity-btn.dropdown-trigger.btn.disabled{'data-target' => 'activity-list', href: '#'}
           %i.material-icons notifications
         %ul#activity-list.dropdown-content.collection.hide
       %li
