--- a/app/assets/stylesheets/grid.container.scss
+++ b/app/assets/stylesheets/grid.container.scss
@@ -19,22 +19,19 @@
     background: none;
     font-size: $font-size-small;
     .slick-pager-status.with-filter, .slick-pager-clear-filter {
-      position: absolute;
       color: $filter-color;
       .material-icons {
+        position: relative;
+        top: 3px;
         font-size: $font-size-middle;
-        padding-top: 1px;
-      }
-      span {
-        float: right;
       }
     };
     .slick-pager-clear-filter {
       padding: 6px 15px 6px 0px;
     };
     .selection-info {
-      position: absolute;
-      left: 20px;
+      position: inherit;
+      left: 50%;
       font-size: $font-size-small;
       color: $grid-header-selection-info-color;
       a.clear {
@@ -55,7 +52,7 @@
       .material-icons {
         position: relative;
         top: 3px;
-        font-size: 16px;
+        font-size: $font-size-middle;
       }
     }
   }
