--- a/app/assets/stylesheets/lib/SlickGrid/slick.pager.scss
+++ b/app/assets/stylesheets/lib/SlickGrid/slick.pager.scss
@@ -1,4 +1,5 @@
 .slick-pager {
+  position: relative;
   width: 100%;
   height: 26px;
   padding-left: 6px;
@@ -40,4 +41,9 @@
   padding: 2px;
   text-decoration: underline;
   cursor: pointer;
+}
+.pager {
+  width: auto;
+  position: absolute;
+  bottom: 0;
 }
