MISC #136 - Add margin-left 5px for clear filter info

--- a/app/assets/stylesheets/grid.container.scss
+++ b/app/assets/stylesheets/grid.container.scss
@@ -25,6 +25,9 @@
         top: 3px;
         font-size: $font-size-middle;
       }
+      span {
+        margin-left: 5px;
+      }
     };
     .slick-pager-clear-filter {
       padding: 6px 15px 6px 0px;
