--- a/app/views/_form.html.haml
+++ b/app/views/_form.html.haml
@@ -30,9 +30,8 @@
                 %input.target_flag{type: 'checkbox', "data-target" => "#{column_name}_target_flag"}
                 %span.lever
           .field{:name => column_name}
-            - unless column.sql_type.to_s.downcase == 'boolean'
-              %label{:for => "#{model_name}_#{column_name}"}= label
             - if (column.sql_type.to_s == 'belongs_to' || column.sql_type.to_s == 'enum')
+              %label{:for => "#{model_name}_#{column_name}"}= label
               = form.select column_name,                                      |
                 select_options(column),                                       |
                 { include_blank: !column.presence_required? },                |
@@ -44,6 +43,7 @@
                 "data-field"       => field                                   |
 
             - elsif (column.sql_type.to_s == 'has_and_belongs_to_many' or column.sql_type.to_s == 'has_many')
+              %label{:for => "#{model_name}_#{column_name}"}= label
               = form.select column.reflection.name.to_s,                       |
                 select_options(column),                                        |
                 { include_blank: !column.presence_required? },                 |
@@ -56,6 +56,7 @@
                 :disabled          => column.options[:auto_fill]               |
 
             - elsif (select_tag_field?(column) || column.sql_type.to_s == 'has_one')
+              %label{:for => "#{model_name}_#{column_name}"}= label
               = select_tag "#{model_name}[#{column_name}]",                   |
                 select_tag_options(column),                                   |
                 :class             => 'chzn-select',                          |
@@ -82,11 +83,14 @@
                   });
 
             - elsif column.options[:file]
+              %label{:for => "#{model_name}_#{column_name}"}= label
               = form.file_field column_name, "data-target" => "#{column_name}_target_flag", "data-field" => field, :style => 'width: 250px'
             - elsif column.options[:password]
+              %label{:for => "#{model_name}_#{column_name}"}= label
               = form.password_field column_name, "data-target" => "#{column_name}_target_flag", "data-field" => field, :style => 'width: 250px'
             - elsif (column.sql_type.to_s == 'string')
-              .input-field
+              .input-field.input-outlined
+                %label{:for => "#{model_name}_#{column_name}"}= label
                 = form.text_field column_name, :class => "auto-complete-text-field-#{column_name}", :value => column.value(object), "data-target" => "#{column_name}_target_flag", "data-field" => field
 
               :javascript
@@ -119,8 +123,10 @@
                     = form.check_box column_name, :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", "data-field" => field, class: 'filled-in'
                     %span #{column_name}
               - elsif column.sql_type.to_s.downcase == 'text'
+                %label{:for => "#{model_name}_#{column_name}"}= label
                 = form.text_area column_name, :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", "data-field" => field, class: "materialize-textarea"
               - else
+                %label{:for => "#{model_name}_#{column_name}"}= label
                 = form.text_field column_name, :style => 'width: 250px', :value => column.value(object), :readonly => column.options[:auto_fill], "data-target" => "#{column_name}_target_flag", 'data-date' => date_column?(column), 'data-datetime' => datetime_column?(column), 'data-time' => time_column?(column), "data-field" => field
 
             .field_error
