--- a/app/assets/stylesheets/overrides/materialize.overrides.scss
+++ b/app/assets/stylesheets/overrides/materialize.overrides.scss
@@ -141,6 +141,7 @@ textarea.materialize-textarea {
 // Form: Text Area
 
 textarea.materialize-textarea {
+  height: 100% !important;
   padding: 0;
   margin: 0;
 }
