--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -43,7 +43,7 @@ form {
         margin-bottom: 5px;
       }
       .chosen-container {
-        width: 100% !important;
+        width: auto !important;
         .chzn-choices {
           .search-choice {
             margin-top: 7px;
@@ -62,7 +62,7 @@ form {
 }
 
 .input-field.input-outlined {
-  > input, textarea {
+  > input, textarea, .chosen-container {
     border: 2px solid #eee;
     padding: 12px 16px 14px;
     width: calc(100% - 2.5rem);
@@ -74,6 +74,10 @@ form {
       border-color: $main-color;
       box-shadow: 0 1px 0 0px $main-color;
     }
+    &.chosen-with-drop {
+      border-color: $main-color;
+      box-shadow: 0 1px 0 0px $main-color;
+    }
   }
   > label {
     left: 27px;
@@ -81,9 +85,10 @@ form {
     width: auto !important;
     top: 0.5rem;
     &.active {
-      background: white;
-      border-left: 4px solid white;
-      border-right: 4px solid white;
+      z-index: 1;
+      background: white !important;
+      border-left: 4px solid white !important;
+      border-right: 4px solid white !important;
       transform: translateY(-1.75rem);
       color: $main-color;
       top: 1rem;
