--- a/app/assets/stylesheets/overrides/chosen.overrides.scss
+++ b/app/assets/stylesheets/overrides/chosen.overrides.scss
@@ -15,7 +15,7 @@ select.chosen, select.chzn-select, select.chosen-select {
   -webkit-box-shadow: none;
   background: none;
   border: none;
-  border-bottom: 1px solid #9e9e9e;
+  // border-bottom: 1px solid #9e9e9e;
   font-size: 15px;
 }
 
