--- a/app/views/_form.html.haml
+++ b/app/views/_form.html.haml
@@ -44,17 +44,18 @@
                   "data-field"       => field                                   |
 
             - elsif (column.sql_type.to_s == 'has_and_belongs_to_many' or column.sql_type.to_s == 'has_many')
-              %label{:for => "#{model_name}_#{column_name}"}= label
-              = form.select column.reflection.name.to_s,                       |
-                select_options(column),                                        |
-                { include_blank: !column.presence_required? },                 |
-                :multiple          => true,                                    |
-                :class             => 'chzn-select',                           |
-                "data-required"    => column.presence_required?,               |
-                "data-source"      => source,                                  |
-                "data-target"      => "#{column_name}_target_flag",            |
-                "data-field"       => field,                                   |
-                :disabled          => column.options[:auto_fill]               |
+              .input-field.input-outlined
+                %label{:for => "#{model_name}_#{column_name}"}= label
+                = form.select column.reflection.name.to_s,                       |
+                  select_options(column),                                        |
+                  { include_blank: !column.presence_required? },                 |
+                  :multiple          => true,                                    |
+                  :class             => 'chzn-select',                           |
+                  "data-required"    => column.presence_required?,               |
+                  "data-source"      => source,                                  |
+                  "data-target"      => "#{column_name}_target_flag",            |
+                  "data-field"       => field,                                   |
+                  :disabled          => column.options[:auto_fill]               |
 
             - elsif (select_tag_field?(column) || column.sql_type.to_s == 'has_one')
               .input-field.input-outlined
