FEATURE #138 - Create contextual menu on the grid

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -23,3 +23,8 @@
       });
   %body
     = yield
+    %ul#contextMenu{:style => "display:none;position:absolute"}
+      %li#contextMenuCopy
+        %i.material-icons
+          = 'content_copy'
+        Copy Cell
