MISC #152 - Modify the botton under marge mode

--- a/app/views/action_partials/toolbar/_select.html.haml
+++ b/app/views/action_partials/toolbar/_select.html.haml
@@ -13,7 +13,7 @@
         %ul.dropdown-content.collection{:id => "more_vert_#{current_grid}"}
           - toolbar_items.each do |item|
             %li
-              = link_to 'javascript:void(0);', id: item.anchor_tag_options[:id] do
+              = link_to 'javascript:void(0);', item.anchor_tag_options_without_waves do
                 %i.material-icons
                   = item.icon.presence || 'help'
                 = item.title
