--- a/app/views/_toolbar.html.haml
+++ b/app/views/_toolbar.html.haml
@@ -8,8 +8,7 @@
 .toolbar-wrapper
   - case WulinMaster.config.button_mode
   - when 'merged'
-    = render '/action_partials/toolbar/merged', toolbar_items: toolbar_items_select
-    = render '/action_partials/toolbar/merged', toolbar_items: toolbar_items_global
+    = render '/action_partials/toolbar/merged', toolbar_items: toolbar_items
   - else
     = render '/action_partials/toolbar/global', toolbar_items: toolbar_items_global
     = render '/action_partials/toolbar/select', toolbar_items: toolbar_items_select
