FEATURE #152 - Finish split mode

--- a/app/assets/stylesheets/grid.header.scss
+++ b/app/assets/stylesheets/grid.header.scss
@@ -111,6 +111,7 @@
       top: $nav-height !important;
       width: 204px !important;
       box-shadow: $box-shadow;
+      height: auto !important;
       li {
         min-height: unset;
         line-height: 1rem;
