--- a/app/views/action_partials/toolbar/_select.html.haml
+++ b/app/views/action_partials/toolbar/_select.html.haml
@@ -9,27 +9,17 @@
       = link_to 'javascript:void(0);', class: 'waves-effect waves-circle dropdown-trigger', 'data-target' => "more_vert_#{current_grid}", 'data-alignment' => 'right' do
         %i.material-icons more_vert
     %ul.dropdown-content.collection{:id => "more_vert_#{current_grid}"}
--# - tooltar_item = toolbar_items.shift
--# .toolbar-select{hidden: WulinMaster.config.split_button_mode?, 'data-mode': WulinMaster.config.button_mode}(data-grid="#{@grid_name}")
--#   - if tooltar_item
--#     - current_grid = tooltar_item.anchor_tag_options[:id].gsub(/.*_action_on_/, '')
--#     %ul
--#       %li.toolbar_item
--#         = link_to 'javascript:void(0);', tooltar_item.anchor_tag_options do
--#           %i.material-icons= tooltar_item.icon.presence || 'help'
--#       - if toolbar_items.present?
--#         %li.toolbar_item
--#           = link_to 'javascript:void(0);', class: 'waves-effect waves-circle dropdown-trigger', 'data-target' => "more_vert_#{current_grid}", 'data-alignment' => 'right' do
--#             %i.material-icons more_vert
--#         %ul.dropdown-content.collection{:id => "more_vert_#{current_grid}"}
--#           - toolbar_items.each do |item|
--#             %li
--#               = link_to 'javascript:void(0);', item.anchor_tag_options_without_waves do
--#                 %i.material-icons
--#                   = item.icon.presence || 'help'
--#                 = item.title
+      - toolbar_items.each do |item|
+        %li
+          = link_to 'javascript:void(0);', 'data-id' => item.anchor_tag_options[:id], onclick: "handleToolbarItemClick(this)"  do
+            %i.material-icons
+              = item.icon.presence || 'help'
+            = item.title
 
 :javascript
   $(function(){
     $('.dropdown-trigger').dropdown({alignment: 'right'});
   })
+  function handleToolbarItemClick(ele) {
+    $('#' + $(ele).data('id')).click()
+  }
